# xengine-samplecode-vulkan-demo-cpp

./: .gitignore  README.en.md  README.md  SHADING_RATE_VISUALIZATION.md  oh-package.json5  readme_cn.md  readme_en.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package-lock.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/common/: common.h
entry/src/main/cpp/file/: file.cpp  file.h  file_operator.cpp  file_operator.h
entry/src/main/cpp/manager/: plugin_manager.cpp  plugin_manager.h
entry/src/main/cpp/render/: model_3d_sponza.cpp  model_3d_sponza.h  plugin_render.cpp  plugin_render.h  vulkan_obj_mesh.cpp  vulkan_obj_mesh.h  vulkan_obj_model.cpp  vulkan_obj_model.h
entry/src/main/cpp/render/algorithm/: fsr.cpp  fsr.h
entry/src/main/cpp/types/libnativerender/: index.d.ts
entry/src/main/cpp/vulkanbase/: VulkanBuffer.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanOhos.cpp  VulkanOhos.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTools.cpp  VulkanTools.h  camera.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h
entry/src/main/ets/entryability/: EntryAbility.ts
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/rawfile/shader/: gbuffer.frag.spv  gbuffer.vert.spv  light.frag.spv  swapChain.frag.spv
entry/src/main/resources/rawfile/shader/algorithm/: easu.frag.spv  fullscreen.vert.spv  rcas.frag.spv
entry/src/main/resources/zh_CN/element/: string.json
